--- a/SkolniEvidence/SkolniEvidence.csproj
+++ b/SkolniEvidence/SkolniEvidence.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.8" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Components\Pages\Student\" />
+  </ItemGroup>
+
 </Project>
